@@ -20,6 +20,12 @@ jobs:
     - name: Run make check
       run: |
         tools/ci-build.sh
+    - uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: dist/*.oxt
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   macos:
     runs-on: macos-10.15
     steps:
