@@ -2,8 +2,11 @@
 
 == master
 
-- Rewritten the layout to use BFS for graph traversal
-- Resolves: gh#19 Infinite recursive stack in Individual.__str__ and Family.__str__
+- Rewritten ged2dot to use BFS for graph traversal (much more robust, though some incompatible old
+  options are now ignored)
+- Resolves: gh#19 fix infinite recursive stack in Individual.__str__ and Family.__str__
+- Resolves: gh#13 marrying cousins is now handled
+- Comes with a qged2dot GUI (packaged as DMG for macOS)
 
 == 7.0
 
